# Enterprise-Document-Intelligence-Compliance-Assistant

./: .gitignore  README.md  docker-compose.yml  enterprise-doc-intelligence-sprint-plan.md  pyproject.toml
.github/workflows/: ci.yml
backend/: .env.example  alembic.ini  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 20260101_0001_initial.py
backend/app/: __init__.py  main.py
backend/app/api/v1/: __init__.py  audit.py  documents.py  health.py  query.py  streaming.py  streaming_ws.py
backend/app/core/: __init__.py  aws.py  config.py  logging.py  security.py  types.py
backend/app/db/: bootstrap.sql  session.py
backend/app/models/: __init__.py  orm.py
backend/app/schemas/: __init__.py
backend/app/services/: __init__.py
backend/app/services/audit/: __init__.py  logger.py
backend/app/services/generation/: __init__.py  bedrock.py  pipeline.py
backend/app/services/ingest/: __init__.py  ocr.py  service.py
backend/app/services/pii/: __init__.py  service.py
backend/app/services/rag/: __init__.py  chunker.py  embeddings.py  indexer.py  vector_store.py
backend/app/services/storage/: __init__.py  s3.py
backend/tests/: conftest.py
backend/tests/integration/: test_api.py  test_rag_pipeline.py
backend/tests/unit/: test_audit.py  test_chunker.py  test_isolation.py  test_pii.py  test_security.py
demo/tenant_acme/: 01-master-services-agreement.txt  (+2 more)
docs/: ARCHITECTURE.md  DEMO.md  RUNBOOK.md
infrastructure/: iam-policy.json  secrets-bootstrap.sh
scripts/: README.md  bootstrap-db.sh  run_tests.py  seed_demo.py
(+11 files in other folders)
