[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "enterprise-doc-intelligence-root"
version = "1.0.0"
description = "Enterprise Document Intelligence & Compliance Assistant (monorepo metadata)"
requires-python = ">=3.11"

[tool.black]
line-length = 100

[tool.ruff]
line-length = 100
